[package]
name = "collab-rt-entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
collab = { workspace = true }
collab-entity = { workspace = true }
serde.workspace = true
bytes = { version = "1.5", features = ["serde"] }
anyhow.workspace = true
actix = { version = "0.13", optional = true }
bincode.workspace = true
tokio-tungstenite = { version = "0.20.1", optional = true }
prost.workspace = true
database-entity.workspace = true
# Use selectable yrs versions to match collab runtime
yrs-legacy = { package = "yrs", version = "0.23.5", features = ["sync"], optional = true }
yrs-modern = { package = "yrs", version = "0.24.0", features = ["sync"], optional = true }
collab-rt-protocol = { workspace = true, default-features = false }
serde_repr = "0.1"
chrono = "0.4"

[build-dependencies]
protoc-bin-vendored = { version = "3.0" }
prost-build = "0.12.3"

[features]
default = ["legacy_collab_api"]
actix_message = ["actix"]
tungstenite = ["tokio-tungstenite"]
legacy_collab_api = [
  "collab-rt-protocol/legacy_collab_api",
  "yrs-legacy",
]
modern_collab_api = [
  "collab-rt-protocol/modern_collab_api",
  "yrs-modern",
]
