[package]
name = "collab-rt-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yrs-legacy = { package = "yrs", version = "0.23.5", features = ["sync"], optional = true }
yrs-modern = { package = "yrs", version = "0.24.0", features = ["sync"], optional = true }
thiserror = "1.0.56"
serde.workspace = true
collab = { workspace = true }
bincode.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio = "1.36.0"
collab-entity.workspace = true
uuid.workspace = true

[features]
default = ["legacy_collab_api"]
legacy_collab_api = ["yrs-legacy"]
modern_collab_api = ["yrs-modern"]
verbose_log = []