[package]
name = "infra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { workspace = true, optional = true }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
bytes = { workspace = true }
tokio = { workspace = true }
pin-project.workspace = true
futures = "0.3.30"
validator = { workspace = true, features = ["validator_derive", "derive"] }
thiserror = { workspace = true }
rayon = { workspace = true }
aws-sdk-s3 = { version = "1.88.0", features = ["behavior-version-latest", "rt-tokio"] }
secrecy = { workspace = true }
uuid = { workspace = true }

[features]
file_util = ["tokio/fs"]
request_util = ["reqwest"]